<resources>
    <string name="app_name">Ecommerce App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_texture_image">Left Texture Image</string>
    <string name="ellipse_image">Ellipse Image</string>
    <string name="the_right_address_nfor_shopping_nanyday">The Right Address\nFor Shopping\nAnyday</string>
    <string name="it_is_now_very_easy_to_reach_the_nbest_quality_among_all_the_nproducts_on_the_internet">It is now very easy to reach the\nbest quality among all the\nproducts on the internet!</string>
    <string name="start">Start</string>
    <string name="blurry_background">Blurry Background</string>
    <string name="kliene">Kliene</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook_login_image_view">Facebook Login Image View</string>
    <string name="facebook">Facebook</string>
    <string name="google_login_image_view">Google Login Image View</string>
    <string name="google">Google</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="do_you_have_an_account_log_in">Do you have an account? Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_the_password_reset_link_to_your_email">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="search_image">Search Image</string>
    <string name="scan_image">Scan Image</string>
    <string name="microphone_image">Microphone Image</string>
    <string name="special_products">Special Products</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
</resources>