<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp">

    <TextView
        android:id="@+id/resetPasswordHeading"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resetPasswordSubHeading"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/we_will_send_you_the_password_reset_link_to_your_email"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordHeading" />

    <EditText
        android:id="@+id/editTextEmailResetPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordSubHeading"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmailResetPassword">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelResetPassword"
            style="@style/whiteButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Space
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendResetPassword"
            style="@style/blueButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>