<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.shopping.HomeFragment">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/search_box_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/poppins_thin"
                android:singleLine="true"
                android:text="@string/search_now"
                android:textColor="#919394"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/search_image"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/icon_background"
            android:backgroundTint="@color/g_search_and_icons"
            android:contentDescription="@string/scan_image"
            android:padding="8dp"
            android:src="@drawable/ic_scan" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/icon_background"
            android:backgroundTint="@color/g_search_and_icons"
            android:contentDescription="@string/microphone_image"
            android:padding="8dp"
            android:src="@drawable/ic_microphone" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:tabMode="scrollable"
        app:tabIndicator="@null"
        app:tabRippleColor="@color/white"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/tabLayout_text" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/homeCategoryViewPager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>